welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:-6: error: Missing closing brace `}' assumed here
try {
^withoutDoubles:1: error: expected class or object definition
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
^